# src/swagger-config.yaml
@@ -38,7 +38,23 @@ paths:
           description: "No user with these credentials exist"
         200:
           description: "Authentication successful"
-  
+
+  /version:
+    get:
+      tags:
+        - "API metadata"
+      summary: "Returns the API version"      
+      responses:
+        200:
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                version:
+                  type: string
+        400:
+          description: "Bad Request"  
+
   /sec:
     post:
       tags: 
@@ -201,3 +217,140 @@ paths:
           description: "OK"
         400:
           description: "Bad Request"  
+
+  /georeferences/{locationid}:
+    get:
+      tags: 
+        - "API methods"
+      summary: "Gets a point-radius georeference with id equal to locationid"
+      parameters:
+        - name: locationid
+          in: path
+          description: "Location identifier"
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                data:
+                  type: string
+                  description: "A JSON string representing georeferenced data"
+                  example: '{"locationID": "geopick-v2.0.0-2024-03-05T11-36-43.359Z-651", "locality": "ss", "decimalLatitude": "57.6962222", "decimalLongitude": "-47.6170809", "geodeticDatum": "EPSG:4326", "coordinateUncertaintyInMeters": "1341393", "coordinatePrecision": 1, "pointRadiusSpatialFit": "", "footprintWKT": "LINESTRING (-67.675781 53.435719, -24.785156 58.263287)", "footprintSRS": "EPSG:4326", "footprintSpatialFit": "", "georeferencedBy": "ss", "georeferencedDate": "2024-03-05T11:36:43.361Z", "georeferenceProtocol": "Georeferencing Quick Reference Guide (Zermoglio et al. 2020, https://doi.org/10.35035/e09p-h128)", "georeferenceSources": "GeoPick v.2.0.0", "georeferenceRemarks": "", "shareLink": "http://geopick.gbif.org/?locationid=geopick-v2.0.0-2024-03-05T11-36-43.359Z-651", "sec_representation": [{"type": "Feature", "properties": {}, "geometry": {"type": "Polygon", "coordinates": [[[-25.677924, 56.003855], ...]]}}]}'
+                msg:
+                  type: string
+                  description: "A message indicating the status of the operation"
+                  example: "Georeference retrieved"
+                path:
+                  type: string
+                  description: "The path of the request"
+                  example: "/?share=geopick-v2.0.0-2024-03-05T11-36-43.359Z-651"
+                success:
+                  type: boolean
+                  description: "Indicates whether the operation was successful"
+                  example: true
+
+  /georeferences:
+    get:
+      tags: 
+        - "API methods"
+      summary: "Gets a paged list of georeferences in GeoPick's database"
+      responses:
+        200:
+          description: "Successful operation"
+          content:
+            application/json:
+              schema:
+                results:
+                  type: array
+                  properties:
+                pagination:
+                  type: object
+                  properties:
+                    count:
+                      type: integer
+                    page:
+                      type: integer
+                    per_page:
+                      type: integer
+                    pages:
+                      type: integer
+                    results:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id: 
+                            type: integer
+                          locationid:
+                            type: string
+                          time_created:
+                            type: string
+                            format: date-time
+                            example: "2024-03-05T15:35:14.411058+01:00"
+                          georef_data:
+                            type: object
+                            properties:
+                              locationID:
+                                type: string
+                              locality:
+                                type: string
+                              decimalLatitude:
+                                type: string
+                              decimalLongitude:
+                                type: string
+                              geodeticDatum:
+                                type: string
+                              coordinateUncertaintyInMeters:
+                                type: string
+                              coordinatePrecision:
+                                type: double
+                              pointRadiusSpatialFit:
+                                type: string
+                              footprintWKT:
+                                type: string
+                              footprintSRS:
+                                type: string
+                              footprintSpatialFit:
+                                type: float
+                              georeferencedBy:
+                                type: string
+                              georeferencedDate:
+                                type: string
+                              georeferenceProtocol:
+                                type: string
+                              georeferenceSources:
+                                type: string
+                              georeferenceRemarks:
+                                type: string
+                              shareLink:
+                                type: string
+                              sec_representation:
+                                type: array
+                                items:
+                                  type: object
+                                  properties:
+                                    type:
+                                      type: string
+                                    properties:
+                                      type: object
+                                    geometry:
+                                      type: object
+                msg:
+                  type: string
+                  description: "A message indicating the status of the operation"
+                  example: "Georeference retrieved"
+                path:
+                  type: string
+                  description: "The path of the request"
+                  example: "/?share=geopick-v2.0.0-2024-03-05T11-36-43.359Z-651"
+                success:
+                  type: boolean
+                  description: "Indicates whether the operation was successful"
+                  example: true
+
+                                
+                                
